@@ -11,6 +11,7 @@
 		finish last pieces of IOs
 	* send 'exit' to rdebug-ide when process termination is forced
 	* cleaned up behavior of suspended threads
+	* support for next+/step+ commands (since ruby-debug-ide 0.1.3)
 
 0.7.0 - 0.7.1
 -------------
